--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- sweet-alert -->
+    <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -29,7 +32,7 @@
             <button id="quick-start" onclick="startQuiz()">Start Quiz</button>
         </main>
         <main id="quiz-screen" style="display:none;">
-            <div class="timer" id="timer">Time left:30</div>
+            <div class="timer" id="timer">Time left:60</div>
             <div class="progress-bar">
                 <div id="progress"></div>
             </div>
